# delegent-core

./: AGENTS.md  LICENSE  README.md  SECURITY.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
docs/: threat-model.md
examples/: README.md  document_review_gate.py  maintenance_window_gate.py
openapi/: delegent-validation.openapi.json
schemas/: authority-grant-claims.schema.json  authority-grant-issued-audit-event.schema.json  authority-grant-validated-audit-event.schema.json  reason-code.schema.json  sender-proof.schema.json  signed-authority-grant.schema.json  validation-request.schema.json  validation-result.schema.json
scripts/: check.py  check_public_boundary.py  check_release_candidate.py
src/delegent/: __init__.py  contracts.py  local.py
tests/: test_contracts.py  test_examples.py  test_local_reference_validator.py  test_package_metadata.py  test_public_boundary.py  test_schemas.py
tests/fixtures/: private-marker-example.txt  public-safe-example.txt
